--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -66,7 +66,7 @@ jobs:
     if: "!contains(github.event.pull_request.title, 'chore: Release')"
     steps:
       - name: Checkout base branch
-        uses: actions/checkout@v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           ref: ${{ github.base_ref }}
 
@@ -78,7 +78,7 @@ jobs:
           echo "📦 Base APP_VERSION: $BASE_VERSION"
 
       - name: Checkout PR branch
-        uses: actions/checkout@v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
       - name: Get PR APP_VERSION
         id: pr_version
