--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -41,9 +41,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results-fs.sarif'
           severity: 'CRITICAL,HIGH'
-          exit-code: '1' # Fail on critical/high vulnerabilities
-          # Ignore unfixed vulnerabilities (optional)
-          # ignore-unfixed: true
+          exit-code: '0' # Don't fail here — SARIF must be generated for upload
 
       # Upload filesystem scan results to GitHub Security tab
       - name: Upload Trivy (Filesystem) results to GitHub Security
@@ -56,13 +54,14 @@ jobs:
       # Scan configuration files (IaC)
       - name: Run Trivy vulnerability scanner (Config)
         uses: aquasecurity/trivy-action@c1824fd6edce30d7ab345a9989de00bbd46ef284 # 0.34.0
+        if: always()
         with:
           scan-type: 'config'
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-results-config.sarif'
           severity: 'CRITICAL,HIGH'
-          exit-code: '1' # Fail on critical/high misconfigurations
+          exit-code: '0' # Don't fail here — SARIF must be generated for upload
 
       # Upload config scan results
       - name: Upload Trivy (Config) results to GitHub Security
@@ -72,7 +71,7 @@ jobs:
           sarif_file: 'trivy-results-config.sarif'
           category: 'trivy-config'
 
-      # Generate human-readable report
+      # Generate human-readable report AND gate the job on findings
       - name: Run Trivy vulnerability scanner (Table format)
         uses: aquasecurity/trivy-action@c1824fd6edce30d7ab345a9989de00bbd46ef284 # 0.34.0
         if: always()
@@ -81,7 +80,7 @@ jobs:
           scan-ref: '.'
           format: 'table'
           severity: 'CRITICAL,HIGH,MEDIUM'
-          exit-code: '0'
+          exit-code: '1' # Fail the job if CRITICAL/HIGH/MEDIUM vulnerabilities exist
 
   trivy-repo-scan:
     name: Trivy Repository Scan
