ci: Relax commitlint — drop sentence-case, ignore merge and release-please commits

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - uses: wagoid/commitlint-github-action@baa1b236f990293a1b2d94c19e41c2313a85e749 # v6.0.2
         with:
-          configFile: .commitlintrc.json
+          configFile: commitlint.config.mjs
 
   dependency-review:
     name: Dependency Review
