--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.39.2",
     "qrcode.react": "^4.2.0",
     "tailwindcss": "^4.1.18",
+    "typesafe-i18n": "^5.27.1",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
