--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@qoomb/types": "workspace:*",
     "@qoomb/ui": "workspace:*",
     "@simplewebauthn/browser": "^13.2.2",
     "@tanstack/react-query": "^5.90.21",
