--- a/.env.example
+++ b/.env.example
@@ -131,28 +131,18 @@ ALLOW_PASSKEYS=true
 ENABLE_EXTERNAL_CALENDAR_SYNC=false
 
 # ==============================================================================
-# AI CONFIGURATION (Optional)
-# ==============================================================================
-# AI provider: openai | anthropic | ollama | disabled
-AI_PROVIDER="disabled"
-
-# OpenAI API Key (required if AI_PROVIDER=openai)
-# Get your key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=""
-
-# Anthropic API Key (required if AI_PROVIDER=anthropic)
-# Get your key from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=""
-
-# Ollama Base URL (required if AI_PROVIDER=ollama)
-# Default local installation: http://localhost:11434
-OLLAMA_BASE_URL="http://localhost:11434"
-
-# ==============================================================================
 # LOGGING
 # ==============================================================================
 # Log level: error | warn | info | debug | verbose
 LOG_LEVEL="info"
+
+# ==============================================================================
+# LOCALE
+# ==============================================================================
+# Platform-wide default locale (BCP 47 tag).
+# Lowest-priority fallback — overridden by hive and user preferences.
+# Examples: "en-US", "en-GB", "de-DE", "de-AT"
+DEFAULT_LOCALE="en-US"
 
 # ==============================================================================
 # EMAIL CONFIGURATION (Optional - for future use)
