fix(ci): detect Release Please PRs by branch name and title pattern
Release Please v4 uses `chore(main): release X.Y.Z` as the PR title,
not the configured `chore: Release X.Y.Z`. The prevent-manual-bump job
now also checks for the `release-please--` branch prefix as a fallback.

--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -61,7 +61,11 @@ jobs:
     name: Prevent Manual Version Bumps
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    if: "!contains(github.event.pull_request.title, 'chore: Release')"
+    # Skip for Release Please PRs (detected by title pattern or branch name)
+    if: >-
+      !contains(github.event.pull_request.title, 'chore: Release')
+      && !contains(github.event.pull_request.title, 'release')
+      && !startsWith(github.head_ref, 'release-please--')
     steps:
       - name: Checkout base branch
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
