--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "@commitlint/cli": "^20.4.2",
     "@commitlint/config-conventional": "^20.4.2",
     "dotenv-cli": "^11.0.0",
-    "eslint-plugin-jsonc": "^3.1.0",
+    "eslint-plugin-jsonc": "^3.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
-    "turbo": "^2.8.10",
+    "turbo": "^2.8.11",
     "typescript": "^5.9.3"
   },
   "engines": {
@@ -65,6 +65,14 @@
       "@types/node": "^25.2.2",
       "ajv@>=8.0.0 <8.18.0": "8.18.0",
       "minimatch": "10.2.1"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@nestjs/core",
+      "@prisma/engines",
+      "bcrypt",
+      "esbuild",
+      "prisma",
+      "unrs-resolver"
+    ]
   }
 }
