--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ certs/
 # Turbo
 .turbo
 
+# GitHub CLI workspace config
+.gh-config
+
 # IDE
 .vscode
 .idea
@@ -57,3 +60,4 @@ yarn-error.log*
 *.sqlite3
 apps/web/.env.local
 .env.backup
+.envrc
