fix: resolve PassKey WebAuthn origin mismatch and harden dev setup
- Fix WEBAUTHN_ORIGIN not read from validated env schema (process.env
  bypass); passkey.service.ts now uses getEnv() throughout
- Add WEBAUTHN_RP_ID, WEBAUTHN_RP_NAME, WEBAUTHN_ORIGIN to Zod schema
  with URL validation (per-origin) and hostname validation for RP ID
- Support comma-separated multi-origin WEBAUTHN_ORIGIN for both dev
  modes simultaneously (localhost + qoomb.localhost)
- Fix _preflight: generate RS256 key pair (JWT_PRIVATE_KEY /
  JWT_PUBLIC_KEY) instead of the wrong JWT_SECRET; add WebAuthn
  origin check before starting Caddy in dev-start
- Rename just recipes: start/setup/start-simple/setup-simple
  → dev-start/dev-setup/dev-start-simple/dev-setup-simple
- Harden JWT temp dir: chmod 700 + trap EXIT cleanup in both
  _preflight and generate-secrets recipes
- Expand docs: SECURITY.md WebAuthn section with RP ID / origin
  constraint, valid config examples, and security properties;
  CLAUDE.md env vars corrected (JWT_SECRET → RS256 key pair) and
  WebAuthn constraint documented

--- a/.env.example
+++ b/.env.example
@@ -129,6 +129,26 @@ ALLOWED_ORIGINS="http://localhost:5173,http://localhost:3000"
 SESSION_SECRET="change-me-in-production-session-secret-32-chars"
 
 # ==============================================================================
+# WEBAUTHN / PASSKEY CONFIGURATION
+# ==============================================================================
+# These must match the origin the browser uses to access the app.
+# The RP ID must be a registrable domain suffix of the origin (e.g. "localhost").
+#
+# For simple dev (just start-simple):
+#   WEBAUTHN_RP_ID=localhost
+#   WEBAUTHN_ORIGIN=http://localhost:5173
+#
+# For full dev with Caddy (just start):
+#   WEBAUTHN_RP_ID=qoomb.localhost
+#   WEBAUTHN_ORIGIN=https://qoomb.localhost:8443
+#
+# Multiple origins (both modes at once):
+#   WEBAUTHN_ORIGIN=https://qoomb.localhost:8443,http://localhost:5173
+WEBAUTHN_RP_ID=localhost
+WEBAUTHN_RP_NAME=Qoomb
+WEBAUTHN_ORIGIN=https://qoomb.localhost:8443,http://localhost:5173
+
+# ==============================================================================
 # FEATURE FLAGS
 # ==============================================================================
 # Allow anyone to register a new hive (false = invite-only, DEFAULT)
