chore(eslint): migrate to ESLint 10 + flat config
- Replace legacy .eslintrc.json files with eslint.config.js across all workspaces
- Rewrite @qoomb/eslint-config/{index,node,react}.js as flat config arrays (ESLint 10+)
- Replace @typescript-eslint/{parser,eslint-plugin} with unified typescript-eslint package
- Replace eslint-plugin-import with eslint-plugin-import-x (ESLint 10 compatible)
- Add @eslint/js and globals packages; remove devDependencies dead weight
- Update eslint peer dep to ^10.0.0 in all workspace package.json files
- Remove ESLINT_USE_FLAT_CONFIG=false from all lint scripts; use glob patterns instead
- Delete .eslintignore; merge ignore patterns into root eslint.config.js
- Update eslint-config-prettier to ^10.0.0

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,15 +8,15 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
-    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src --ext .ts",
-    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint src --ext .ts --fix",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@qoomb/eslint-config": "workspace:^",
     "@qoomb/tsconfig": "workspace:*",
     "@types/node": "^25.3.0",
-    "eslint": "^9.39.3",
+    "eslint": "^10.0.0",
     "typescript": "^5.9.3"
   }
 }
