--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,8 +15,8 @@
     "build": "nest build",
     "start": "node dist/main",
     "start:prod": "node dist/main",
-    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src --ext .ts",
-    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint src --ext .ts --fix",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "type-check": "tsc --noEmit",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
@@ -64,7 +64,7 @@
     "@types/node": "^25.3.0",
     "@types/nodemailer": "^7.0.11",
     "@types/pg": "^8.16.0",
-    "eslint": "^9.39.3",
+    "eslint": "^10.0.0",
     "jest": "^30.2.0",
     "prisma": "^7.4.1",
     "ts-jest": "^29.4.6",
