--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,21 +10,20 @@
     "react.js"
   ],
   "peerDependencies": {
-    "eslint": "^9.0.0",
+    "eslint": "^10.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.56.1",
-    "@typescript-eslint/parser": "^8.56.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
+    "@eslint/js": "^10.0.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.0.0",
+    "eslint-plugin-jsonc": "^3.1.1",
     "eslint-plugin-n": "^17.24.0",
-    "eslint-plugin-jsonc": "^3.1.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.0.0",
-    "eslint-plugin-react-hooks": "^7.0.1"
-  },
-  "devDependencies": {
-    "eslint-import-resolver-typescript": "^4.4.4"
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^15.0.0",
+    "typescript-eslint": "^8.0.0"
   }
 }
