fix(ci): add Prisma generate step to post-release build job
The post-release tasks job in release.yml ran `pnpm build` without
first generating the Prisma client. This caused the entire build to
fail with cascading TS2305 errors: '@prisma/client' has no exported
members (Hive, User, Task, etc.) + TS2307 for workspace packages
that depend on the generated types.

Add an explicit 'Generate Prisma Client' step (matching the pattern
in the quality and test jobs) before the build step.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Generate Prisma Client
+        run: pnpm run db:generate
+        env:
+          DATABASE_URL: postgresql://dummy:dummy@localhost/dummy
+
       - name: Build
         run: pnpm build
 
