feat: WCAG 2.1 AA accessibility standards, test infrastructure, and feature flag system
- docs: ADR-0006 Frontend Accessibility Standards (WCAG 2.1 AA, 12 sections)
- feat(eslint): add eslint-plugin-jsx-a11y with 9 rules to @qoomb/eslint-config
- feat(test): install vitest + @testing-library/react + vitest-axe, configure vitest.config.ts
- test: axe smoke tests for AppShell (7), Dashboard (7), LoginPage (9) — 23/23 pass
- fix(a11y): add aria-label to both nav landmarks in AppShell (landmark-unique violation)
- feat(i18n): add nav.mainLabel + nav.mobileLabel keys (DE/EN)
- feat(flags): add feature flag registry (apps/web/src/lib/flags)
- feat(dashboard): refactor Dashboard with DashboardSketch + feature flag gating
- feat(appshell): mobile bottom tab bar, logo, nav cleanup

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -32,16 +36,23 @@
     "@qoomb/eslint-config": "workspace:^",
     "@qoomb/tsconfig": "workspace:*",
     "@tailwindcss/vite": "^4.2.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.4",
+    "@vitest/ui": "^4.0.18",
     "eslint": "^10.0.0",
+    "jsdom": "^28.1.0",
     "qrcode.react": "^4.2.0",
     "tailwindcss": "^4.2.0",
     "typesafe-i18n": "^5.27.1",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
+    "vitest": "^4.0.18",
+    "vitest-axe": "^0.1.0",
     "workbox-window": "^7.4.0"
   }
 }
